--- a/css/main.scss
+++ b/css/main.scss
@@ -2,9 +2,14 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500;600;700&display=swap");
 
+@import "partials/homepage";
+@import "partials/about";
+
 @mixin border {
   border: 1px solid black;
 }
+
+$main-font: "Source Code Pro", monospace;
 
 * {
   margin: 0;
@@ -16,11 +21,17 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  justify-content: space-between;
+  position: relative;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: $main-font;
 }
 
 a {
-    color: black;
+  color: black;
 }
 
 nav {
@@ -32,22 +43,28 @@ nav {
   a {
     color: black;
     height: 1em;
-    // @include border;
     text-decoration: none;
     &:hover {
       font-weight: bold;
-    //   @include border;
     }
     &::after {
-        // @include border;
-      // text-align: center;
       content: attr(title);
       height: 0;
       visibility: hidden;
       overflow: hidden;
       font-weight: bold;
-      color: rgb(89, 89, 4);
-      // background-color: green;
+    }
+  }
+  ul {
+    width: 450px;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: Raleway, Serif;
+    li {
+      list-style: none;
+      text-align: center;
     }
   }
 }
@@ -56,50 +73,26 @@ nav {
   margin-left: 30px;
 }
 
-ul {
-  width: 450px;
-  height: 100%;
+main {
+  margin: 0 2em 3em 1.5em;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-family: $main-font;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-family: Raleway, Serif;
-  li {
-    list-style: none;
-    text-align: center;
+  justify-content: center;
+  flex-wrap: wrap;
   }
+
+p {
+    margin-top: 10px;
 }
 
-main {
-  font-family: "Source Code Pro", monospace;
-  text-transform: uppercase;
-  // background-color: blue;
-  flex-grow: 1;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  .intro {
-    // background-color: yellow;
-    margin: auto;
-  }
-  h1 {
-    font-weight: 500;
-    font-size: 4em;
-    line-height: 0.7em;
-  }
-  h2 {
-    font-size: 0.7em;
-    font-weight: 200;
-    &::before {
-      content: "<!-- ";
-    }
-    &::after {
-      content: " -->";
-    }
-  }
-}
+
 
 footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
   display: flex;
   justify-content: center;
   div {
@@ -113,39 +106,86 @@ footer {
 
 /* For mobile phones: */
 [class*="col-"] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
     width: 100%;
   }
-  
-  @media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
-    h2 {
-        text-align: center;
-    }
+
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
   }
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+  .col-2 {
+    width: 16.66%;
   }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
+
