--- a/css/partials/_about.scss
+++ b/css/partials/_about.scss
@@ -9,7 +9,8 @@
     display: block;
     margin: auto;
     max-width: 40vw;
-    filter: grayscale(65%);
+    filter: grayscale(50%);
+    border-radius: 3px;
   }
 }
 
