Add projects page & scss partials

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@
 
 @import "partials/homepage";
 @import "partials/about";
+@import "partials/projects";
 
 @mixin border {
   border: 1px solid black;
