--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 45px;
 }
 
 .main-about h2 {
@@ -61,13 +62,102 @@
   /* For tablets: */
   .main-about {
     width: 80vw;
-    margin: 0 auto;
+    margin: 0 auto 45px;
   }
   .main-about img {
     max-width: 25vw;
     display: inline;
     float: left;
     margin: 15px 30px 15px 0;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+}
+
+.main-projects {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 45px;
+}
+
+.main-projects h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.main-projects a {
+  text-decoration: none;
+  color: white;
+}
+
+.main-projects .project {
+  height: 250px;
+  width: 250px;
+  margin: 20px;
+  background-color: lightblue;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid black;
+}
+
+.main-projects .project img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 85%;
+  width: 100%;
+}
+
+.main-projects .project .project-name {
+  text-align: center;
+}
+
+.main-projects .project .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  background-color: #008CBA;
+  text-align: center;
+}
+
+.main-projects .project .overlay:hover {
+  opacity: 0.9;
+}
+
+.main-projects .project .overlay p {
+  width: 85%;
+  margin-top: 0;
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .main-projects {
+    width: 80vw;
+    margin: 0 auto 45px;
   }
 }
 
