--- a/css/partials/_about.scss
+++ b/css/partials/_about.scss
@@ -1,10 +1,10 @@
 .main-about {
   align-items: center;
   margin-bottom: 45px;
+  line-height: 1.2em;
   h2 {
     margin-top: 15px;
     margin-bottom: 15px;
-    // background-color: lightblue;
   }
   img {
     display: block;
@@ -13,6 +13,49 @@
     filter: grayscale(50%);
     border-radius: 3px;
   }
+
+  .experience {
+    width: fit-content;
+    margin-top: 25px;
+    text-align: center;
+    .work-exp {
+      width: fit-content;
+      margin: 20px auto;
+      .job {
+        margin: 15px;
+        text-align: left;
+      }
+      h3 {
+        width: fit-content;
+        background-color: rgba(0, 255, 0, 0.5);
+        font-size: 1.3em;
+        font-weight: 500;
+        line-height: 0.8em;
+        margin-bottom: 6px;
+        text-align: left;
+      }
+      .company {
+        font-weight: bold;
+      }
+      p {
+        margin: 0;
+      }
+    }
+  }
+  .skills {
+    width: fit-content;
+    // background-color: lightblue;
+    ul {
+      margin: auto;
+      // background-color: lightgreen;
+      list-style: none;
+    }
+  }
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
 
 @media only screen and (min-width: 600px) {
@@ -26,6 +69,7 @@
       float: left;
       margin: 15px 30px 15px 0;
     }
+
   }
   
 }
