--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 @import "partials/homepage";
 @import "partials/about";
 @import "partials/projects";
+@import "partials/blog";
 
 @mixin border {
   border: 1px solid black;
@@ -23,6 +24,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   position: relative;
+  font-family: $main-font;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -75,7 +77,8 @@ nav {
 }
 
 main {
-  margin: 0 2em 3em 1.5em;
+  // margin: 0 2em 3em 1.5em;
+  margin: 0 2em 3em 2em;
   padding-top: 10px;
   padding-bottom: 10px;
   font-family: $main-font;
@@ -150,7 +153,7 @@ footer {
   }
 
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
   /* For desktop: */
   .col-1 {
     width: 8.33%;
