--- a/css/main.scss
+++ b/css/main.scss
@@ -77,8 +77,7 @@ nav {
 }
 
 main {
-  // margin: 0 2em 3em 1.5em;
-  margin: 0 2em 3em 2em;
+  margin: 0 auto 45px;
   padding-top: 10px;
   padding-bottom: 10px;
   font-family: $main-font;
