--- a/css/main.scss
+++ b/css/main.scss
@@ -33,8 +33,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $main-font;
 }
 
+
 a {
   color: black;
+  // background-color: lightblue;
+
 }
 
 nav {
@@ -84,6 +87,14 @@ main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  a {
+    color: #b11e1e;
+    text-decoration: none;
+    &:hover {
+      font-weight: bold;
+      text-decoration: underline;
+    }
+  }
   }
 
 p {
