--- a/css/partials/_about.scss
+++ b/css/partials/_about.scss
@@ -2,6 +2,7 @@
   align-items: center;
   line-height: 1.2em;
   padding: 20px;
+  // background-color: mediumpurple;
   h2 {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -16,9 +17,14 @@
   }
 
   .experience {
-    width: fit-content;
+    // width: fit-content;
     margin-top: 25px;
     text-align: center;
+    #resume {
+      // border: 1px solid black;
+      width: 70%;
+      margin: auto;
+    }
     .work-exp {
       width: fit-content;
       margin: 20px auto;
@@ -28,8 +34,9 @@
       }
       h3 {
         width: fit-content;
-        background-color: rgba(0, 255, 0, 0.5);
         font-size: 1.3em;
+        background-color: rgba(0, 255, 0, 0.5);
+        // background-color: rgba(30, 177, 30, 0.5);
         font-weight: 500;
         line-height: 0.8em;
         margin-bottom: 6px;
@@ -45,7 +52,9 @@
   }
   .skills {
     width: fit-content;
+    margin: 25px auto;
     // background-color: lightblue;
+
     ul {
       margin: auto;
       margin-bottom: 15px;
@@ -66,11 +75,18 @@
     width: 80vw;
     margin: 0 auto 45px;
     // Styling for the profile image on tablet + desktop
+    align-items: flex-start;
     img {
       max-width: 25vw;
       display: inline;
       float: left;
       margin: 15px 30px 15px 0;
+      
+      }
+      .experience {
+        .work-exp {
+          margin: 20px auto 0px 0px;
+        }
     }
 
   }
