--- a/css/main.css
+++ b/css/main.css
@@ -156,16 +156,30 @@
   margin-bottom: 15px;
 }
 
+.main-projects #project-intro {
+  width: 100%;
+}
+
+.main-projects #project-intro p {
+  margin: 10px auto;
+  padding: 0 20px;
+}
+
 .main-projects a {
+  color: white;
+}
+
+.main-projects a:hover {
   text-decoration: none;
   color: white;
+  font-weight: normal;
 }
 
 .main-projects .project {
   height: 250px;
   width: 250px;
   margin: 20px;
-  background-color: lightblue;
+  background-color: #b11e1e;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -198,9 +212,9 @@
   height: 100%;
   width: 100%;
   opacity: 0;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  background-color: #008CBA;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  background-color: #008cba;
   text-align: center;
 }
 
@@ -227,10 +241,21 @@
     width: 80vw;
     margin: 0 auto 45px;
   }
+  .main-projects #project-intro p {
+    text-align: center;
+    width: 80%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   /* For desktop: */
+  .main-projects {
+    width: 80vw;
+    margin: 0 auto 45px;
+  }
+  .main-projects #project-intro p {
+    width: 60%;
+  }
 }
 
 .main-blog {
