--- a/css/main.css
+++ b/css/main.css
@@ -114,12 +114,6 @@
   list-style: none;
 }
 
-.break {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  height: 0;
-}
-
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .main-about {
@@ -321,6 +315,8 @@ body {
   min-height: 100vh;
   position: relative;
   font-family: "Source Code Pro", monospace;
+  font-weight: 500;
+  font-style: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
