--- a/css/partials/_blog.scss
+++ b/css/partials/_blog.scss
@@ -23,10 +23,10 @@
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .main-blog {
-    // margin: 0 auto 45px;
     h3 {
       text-align: left;
     }
+    // Styling for the blog thumbnails on tablet sizing
     img {
       height: 130px;
       width: 200px;
@@ -40,7 +40,7 @@
 @media only screen and (min-width: 769px) {
   /* For desktop: */
   .main-blog {
-
+    // styling for the blog thumbnails on desktop sizing 
     img {
       height: 150px;
       width: 280px;
