--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500;1,700&display=swap");
 .main-home {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -314,15 +315,15 @@ body {
           flex-direction: column;
   min-height: 100vh;
   position: relative;
-  font-family: "Source Code Pro", monospace;
-  font-weight: 500;
+  font-family: "source code pro", monospace;
+  font-weight: 400;
   font-style: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   text-align: center;
-  font-family: "Source Code Pro", monospace;
+  font-family: "source code pro";
 }
 
 a {
@@ -389,7 +390,6 @@ main {
   margin: 0 auto 45px;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: "Source Code Pro", monospace;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
