--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500;600;700&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500;1,700&display=swap');
+
 // Partials have been created to make it easier to find page-specific styling. Partials are imported here 
 @import "partials/homepage";
 @import "partials/about";
@@ -28,15 +30,15 @@ body {
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  font-family: $main-font;
-  font-weight: 500;
+  font-family: $main-font
+  font-weight: 400; 
   font-style: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
     text-align: center;
-    font-family: $main-font;
+    
 }
 
 
@@ -89,7 +91,6 @@ main {
   margin: 0 auto 45px;
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: $main-font;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
