Fix missing semicolon issue in main.scss

--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@ body {
           flex-direction: column;
   min-height: 100vh;
   position: relative;
-  font-family: "source code pro", monospace;
+  font-family: "Source Code Pro", monospace;
   font-weight: 400;
   font-style: normal;
 }
@@ -323,7 +323,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   text-align: center;
-  font-family: "source code pro";
 }
 
 a {
