--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  font-family: $main-font
+  font-family: $main-font;
   font-weight: 400; 
   font-style: normal;
 }
