--- a/css/partials/_projects.scss
+++ b/css/partials/_projects.scss
@@ -29,7 +29,7 @@
   .project {
     @include project-size();
     margin: 20px;
-    background-color: #b11e1e;
+    background-color: rgba(177, 30, 30, 0.8);
     position: relative;
     display: flex;
     flex-wrap: wrap;
